--- a/www/bower.json
+++ b/www/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "uRoku",
+  "name": "uroku",
   "homepage": "https://github.com/ShaneQful/uRoku",
   "authors": [
     "ShaneQful <shane@softwareontheside.info>"
